--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "cy:open": "cypress open --project ./tests",
+    "cy:run": "cypress run --project ./tests"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -28,6 +30,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.2.1",
     "babel-eslint": "^10.1.0",
+    "cypress": "^7.6.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
