--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ script:
   - npm install -g @vue/cli
   - npm install
   - npm run test:unit
+on:
+  branch: Test
 deploy:
   provider: surge
   domain: iaas-frontend.surge.sh
