--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mem"]
-	path = mem
-	url = git@github.com:ULL-TFGyMs-vblanco/TFG-2021-Miriam-ULLIaaSFrontend-Memoria.git
+; [submodule "mem"]
+; 	path = mem
+; 	url = git@github.com:ULL-TFGyMs-vblanco/TFG-2021-Miriam-ULLIaaSFrontend-Memoria.git
