--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
   - stable
-cache:
-  directories:
-    - node_modules
+git:
+  submodules: false
 script:
   - npm install -g @vue/cli
   - npm install
+  - npm run build
   - npm run test:unit
 on:
   branch: Test
